spacing fixes

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1255,8 +1255,8 @@ input.blog-search-input, .widget.signupform input,
 .widget.blogsearch input,
 select {
     border: 1px solid darken(@color-swatch2, 5%);
-    text-indent: 8px;
-    -webkit-appearance: none;
+    padding-left: 8px;
+    padding-right: 8px;
     background-color: @color-swatch1;
     height: 40px;
     .transition(all, 0.5s, ease);
@@ -1275,8 +1275,6 @@ select {
 
 textarea {
     border: 1px solid darken(@color-swatch2, 5%);
-    text-indent: 8px;
-    -webkit-appearance: none;
     background-color: @color-swatch1;
     padding: 10px;
     height: 100px;
